# git-ci

./: CMakeLists.txt  README.md  hello.cpp
.github/workflows/: cmake.yml  tests.yml
