CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(git-ci-test VERSION 0.1)

ADD_EXECUTABLE(hello hello.cpp)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}" CACHE PATH "Prefix prepended to install directories" FORCE)
ENDIF()


INSTALL(TARGETS hello DESTINATION bin)

ENABLE_TESTING()

ADD_TEST(test-01 ${CMAKE_INSTALL_PREFIX}/bin/hello nobody)
SET_TESTS_PROPERTIES(test-01 PROPERTIES
  PASS_REGULAR_EXPRESSION "Hallo nobodyyy"
)
